style: fix to home floating spacings and sizes

--- a/src/components/HomeFloatingMenu/styles.module.scss
+++ b/src/components/HomeFloatingMenu/styles.module.scss
@@ -9,13 +9,13 @@
 .card {
   margin: auto;
   background: var(--white);
-  box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.2);
-  padding: 0.6rem 0.8rem;
-  border-radius: 15px;
+  box-shadow: 0px 3px 6px rgba(0, 0, 0, 0.16);
+  padding: 0.8rem 1rem;
+  border-radius: 0.8rem;
   display: flex;
   align-items: center;
   justify-content: space-between;
-  gap: 1.2rem;
+  gap: 1.3rem;
 
   //   @media (min-width: 1200px) {
   //     padding-left: calc((100vw - 1200px) / 2);
@@ -34,13 +34,13 @@
 
 .iconButton {
   position: relative;
-  width: 2.8rem;
-  height: 2.8rem;
+  width: 3.4rem;
+  height: 3.4rem;
   display: flex;
   align-items: center;
   justify-content: center;
   padding: 0.3rem;
-  border-radius: 15px;
+  border-radius: 0.8rem;
   background: var(--gray-200);
   color: var(--primary);
 
